--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
+  "scripts": {
+    "dev": "nodemon ./server.js",
+    "start": "node ./server.js"
+  },
   "dependencies": {
     "cors": "^2.8.5",
-    "json-server": "^0.16.3",
+    "json-server": "^0.17.0",
     "json-server-auth": "^2.1.0"
   }
 }
